--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,13 @@
-{  "name": "Hypem",  "version": "1.0",  "description": "Control Hypem.com without having to find teh tab",  "browser_action": {    "default_icon": "icon_16.png",	"popup": "popup.html"  },  "icons": { "16": "icon_16.png",           "48": "icon_48.png",          "128": "icon_128.png" },  "content_scripts": [	{		"matches": ["http://hypem.com/*"],		"js": ["content.js"]	}	],  "permissions": [    "http://hypem.com/*",	"tabs"  ]}
+{ "name": "Hypem",
+  "version": "1.0",
+  "description": "Control Hypem.com without having to find the tab",
+  "browser_action": {
+      "default_icon": "icon_16.png",
+      "popup": "popup.html"
+  },
+  "icons": { 
+    "16": "icon_16.png",
+    "48": "icon_48.png",
+    "128": "icon_128.png" },
+      "permissions": ["http://hypem.com/*","tabs" ]
+}
